--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,7 @@
 @tailwind utilities;
 
 @import url('https://fonts.googleapis.com/css?family=Montserrat&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Playfair+Display:700&display=swap');
 
 html {
   font-size: 14px;
@@ -10,6 +11,6 @@ html {
 
 @screen md {
   html {
-    font-size: 18px;
+    font-size: 16px;
   }
 }
